export default interface EventInterface{
    dateTimeOcurred: Date;
    eventData: any;
}