@startuml classdiagram
allow_mixing
interface EventDispatcherInterface{
    notify();
    register();
    unregister();
    unregisterAll();
}

class EventDispatcher{
    notify();
    register();
    unregister();
    unregisterAll();
}

interface EventHandlerInterface{
    handle();
}

class NotifyAddressChangeEvent{
    handle();
}


interface EventInterface{
    dateTimeOcurred: Date;
    eventData: any;
}

 class CustomerCreatedEvent{

 }

EventDispatcherInterface <|.. EventDispatcher

EventDispatcherInterface o.. EventInterface

EventDispatcherInterface o.. EventHandlerInterface

EventInterface <|.. CustomerCreatedEvent

EventHandlerInterface <|.. NotifyAddressChangeEvent

@enduml